# 5PS_Coding_Assessment

./: .gitignore  GWAS_report.ipynb  README.md  linux_assessments.ipynb  python_assessments.ipynb
jupyter_notebooks/: GWAS_assessments.ipynb  linux_assessments.html  python_assessments.ipynb
linux_assessments/: linux_assessments.ipynb
quarto_md/: GWAS_assessments.qmd  GWAS_report.qmd  linux_assessments.html  linux_assessments.qmd  python_assessments.qmd
simple_python_GWAS_package/: LICENSE  README.md  pyproject.toml  requirements.txt
simple_python_GWAS_package/python_GWAS_helpers/: clean_gwas_sumstats.py
simple_python_GWAS_package/src/python_GWAS_helpers/: __init__.py  clean_gwas_sumstats.py
simple_python_GWAS_package/tests/: context.py  test_sumstat_cleanup.py
workflow_assessments/GWAS_assessments/: gwas_report.json  gwas_report.wdl
workflow_assessments/hello_world/: hello_word.wdl  hello_world_inputs.json  hello_world_inputs.wdl
