[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python_GWAS_helpers"
version = "0.0.1"
authors = [
  { name="Kevin liang"},
]
description = "A small example package for parsing GWAS summary statistics"
readme = "README.md"
requires-python = ">=3.9.19"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pandas",
  "numpy",
  "pyyaml"
]
